<resources>
    <string name="app_name">My Application Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotifySteamer">Spotify Streamer</string>
    <string name="scoresApp">Scores App</string>
    <string name="buildItBigger">Build It Bigger</string>
    <string name="xyzReader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
