<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifySteamer"
        android:id="@+id/button_spotifyStreamer"
        android:layout_marginTop="30dp"
        android:height="50dp"
        android:width="200dp"
        android:layout_below="@+id/textView_title"
        android:layout_alignStart="@+id/button_buildItBigger"
        android:background="#DCEDC8"
        android:onClick="handleButtonPush" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresApp"
        android:id="@+id/button_scoresApp"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:height="50dp"
        android:layout_below="@+id/button_spotifyStreamer"
        android:layout_alignStart="@+id/button_spotifyStreamer"
        android:background="#DCEDC8"
        android:onClick="handleButtonPush" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/button_buildItBigger"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:height="50dp"
        android:layout_below="@+id/button_scoresApp"
        android:layout_centerHorizontal="true"
        android:background="#DCEDC8"
        android:onClick="handleButtonPush" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzReader"
        android:id="@+id/button_xyzReader"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:height="50dp"
        android:layout_below="@+id/button_buildItBigger"
        android:layout_centerHorizontal="true"
        android:background="#DCEDC8"
        android:onClick="handleButtonPush" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        android:width="200dp"
        android:height="50dp"
        android:layout_below="@+id/button_xyzReader"
        android:layout_alignStart="@+id/button_xyzReader"
        android:layout_marginTop="20dp"
        android:background="#FFEB3B"
        android:onClick="handleButtonPush" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="32dp" />
</RelativeLayout>
